<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipToOutline="false"
    tools:context=".fragment_popup.PopUpOrderFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToOutline="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <Button
        android:id="@+id/button_like"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        app:cornerRadius="8dp"
        app:icon="@drawable/icons_heart"
        app:iconGravity="textTop"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        app:cornerRadius="8dp"
        app:icon="@drawable/icons_cross"
        app:iconGravity="textTop"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <ImageView
        android:id="@+id/image_popup_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:srcCompat="@drawable/dish_popup"
        android:contentDescription="@string/image_dish_popup" />

    <TextView
        android:id="@+id/title_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_order"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/image_popup_dish" />

    <TextView
        android:id="@+id/price_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_order"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/title_popup" />

    <TextView
        android:id="@+id/weight_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight_order"
        app:layout_constraintStart_toEndOf="@+id/price_popup"
        app:layout_constraintTop_toBottomOf="@+id/title_popup" />

    <TextView
        android:id="@+id/description_popup"
        android:layout_width="372dp"
        android:layout_height="36dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="9dp"
        android:text="@string/description_dish"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/price_popup" />

    <Button
        android:id="@+id/add_busket_popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/button_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/description_popup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>